# toxic-detector

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: config.yaml
data/: test.csv.dvc  test_labels.csv.dvc
toxic-detector/: classifiers.py  dataset.py  infer.py  train.py
